# my-sandbox-git-github

./: .gitignore  README.md  init.sh  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-mkdocs-poetry.yml
docs/: about.md  index.md
etc/: nginx.conf
