[tool.poetry]
name = "my-sandbox-git-github"
version = "0.1.0"
description = "Sandbox for learning Git and GitHub"
authors = ["Artem Hotenov <qa@hotenov.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
mkdocs-material = "^9.5.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
